@@ -1,3 +1,12 @@
+2013-01-07	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* schedule.*, usecode/intrinsics.cc: Fixed bug #3599714 "Attacked npcs make
+	  their bed before defending themselves". Also fixed bug where NPCs were not
+	  too concerned about who they share their beds with -- they could lie down
+	  with the avatar. Incidentally, this incidentaly fixes the bug reported in
+	  the comments of the aforementioned bug report (avatar making a bed that an
+	  NPC took right after the avatar woke up). Improved bed occupancy detection
+	  routine allows children to be detected too.
+
 2013-01-06	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* actions.cc: Fixed Fawn guards sometimes not being able to open doors.
 	* actions.*, actors.cc: Prevent schedule changes from stopping intrinsics
